<resources>
    <string name="app_name">VRExpo</string>
    <string name="hyperlink"><a href="https://www.youtube.com/watch?v=DhE9J_XbeK4">Test link</a></string>
    <string name="nav_open" />
    <string name="nav_close" />
    <string name="for_optimal_results_wear_headphone">🎧For Optimal Results Wear Headphone🎧</string>
    <string name="update">Update</string>
    <string name="p_w0rd">P@$$w0rd</string>
    <string name="password">Password</string>
    <string name="test_test_com">test@test.com</string>
    <string name="email">Email</string>
    <string name="test_address">Test Address</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="gendertext">Gender</string>
    <string name="_000_000_0000">000-000-0000</string>
    <string name="phone_number">Phone Number</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="patient_name">Patient Name</string>
    <string name="full_name">Full Name</string>

    <!-- Zoom Stuff -->
    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="create">Create</string>
    <string name="join">Join Session</string>

    <string name="cancel">Cancel</string>
    <string name="actionbar_done">Done</string>
    <string name="save">Save</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="create_title">Create a Session</string>
    <string name="join_title">Join a Session</string>
    <string name="session_name">Session Name</string>
    <string name="session_name_hint">Required</string>
    <string name="session_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ !#$%&#038;()+-:;&#060;&#061;.&#062;?@[]^_{}|~,</string>
    <string name="your_name">Your Name</string>
    <string name="your_name_hint">Required</string>
    <string name="sessionIdleTimeoutMins">SessionIdleTimeoutMins</string>
    <string name="password_hint">Optional</string>
    <string name="renderer">Renderer</string>
    <string name="wrong_pass_tips">Wrong password.Try again</string>
    <string name="copy_tips">Copied to clipboard</string>

    <string name="renderer_option">Renderer Options</string>
    <string name="renderer_option_zoom">Zoom renderer</string>

    <string name="setting_title">Settings</string>

    <string name="share_title">Share</string>
    <string name="share_screen">Share Device Screen</string>
    <string name="share_screen_info">Everything on your device screen will be shared</string>
    <string name="share_picture">Share a Picture</string>
    <string name="share_picture_info">Share a picture from your device</string>

    <string name="leave_message">Do you want to leave this session?</string>
    <string name="leave_end_text">End Session</string>
    <string name="leave_leave_text">Leave Session</string>

    <string name="close">Close</string>

    <string name="open">Open</string>
    <string name="refresh_description" />

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

</resources>